--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.3",
+    "hardhat-contract-sizer": "^2.4.0",
     "hardhat-gas-reporter": "^1.0.7",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
@@ -31,10 +32,12 @@
     "solidity-coverage": "^0.7.18",
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
-    "typescript": "^4.5.5",
-    "hardhat-contract-sizer": "^2.4.0"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    
+    "@openzeppelin/contracts-upgradeable": "3.4.2",
+    "@perp/curie-contract": "^1.0.15",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.0"
   }
 }
