--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@perp/curie-contract": "^1.0.15",
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.0",
+    "abi-decoder": "^2.4.0",
     "axios": "^0.26.1"
   }
 }
