add secrets on pipeline env

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,11 +2,23 @@ name: Run Tests on Push
 
 on: push
 
+env:
+  ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
+  ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
+  TENDERLY_FORK_ID: ${{ secrets.TENDERLY_FORK_ID }}
+  QUICKNODE_OPTIMISM_URL: ${{ secrets.QUICKNODE_OPTIMISM_URL }}
+  OPTIMISM_BLOCK_NUMBER: ${{ secrets.OPTIMISM_BLOCK_NUMBER }}
+  BLOCK_NUMBER: ${{ secrets.BLOCK_NUMBER }}
+  FORK_OPTIMISM: ${{ secrets.FORK_OPTIMISM }}
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Echo env
+        run: echo $FORK_OPTIMISM
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
