add right test command

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,4 +31,4 @@ jobs:
         run: npx hardhat compile
 
       - name: Test 🚨
-        run: npx hardhat test
+        run: npx hardhat test test/mainnet/*
