--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-ALCHEMY_KEY = # alchemy provider api key 
-PRIVATE_KEY =  # private key of account
-ETHERSCAN_API_KEY = # etherscan api key
-TENDERLY_FORK_ID = # tenderly fork id
-QUICKNODE_OPTIMISM_URL= # quicknode optimism rpc_end_point url
+ALCHEMY_KEY=
+ETHERSCAN_API_KEY=
+TENDERLY_FORK_ID=
+QUICKNODE_OPTIMISM_URL=
+OPTIMISM_BLOCK_NUMBER=
+BLOCK_NUMBER=
+FORK_OPTIMISM=
