--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.0",
     "abi-decoder": "^2.4.0",
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "hardhat-change-network": "^0.0.7"
   },
   "husky": {
     "hooks": {
