--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.6",
+    "dayjs": "^1.11.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -41,6 +42,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@lyrafinance/lyra-js": "^0.0.9",
+    "@lyrafinance/protocol": "^0.1.2-alpha",
     "@openzeppelin/contracts-upgradeable": "3.4.2",
     "@perp/curie-contract": "^1.0.15",
     "@uniswap/v3-core": "^1.0.1",
@@ -48,9 +51,7 @@
     "abi-decoder": "^2.4.0",
     "axios": "^0.26.1",
     "hardhat-change-network": "^0.0.7",
-    "openzeppelin-contracts-4.4.1": "npm:@openzeppelin/contracts@4.4.1",
-    "@lyrafinance/lyra-js": "^0.0.9",
-    "@lyrafinance/protocol": "^0.1.2-alpha"
+    "openzeppelin-contracts-4.4.1": "npm:@openzeppelin/contracts@4.4.1"
   },
   "husky": {
     "hooks": {
