ft: dynamic tenderly setup

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hardhat-project",
   "scripts": {
     "compile": "npx hardhat compile",
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "run:tenderly": "npx hardhat run scripts/setupTenderly.ts --no-compile && npx hardhat"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
