--- a/tenderlyConfig.json
+++ b/tenderlyConfig.json
@@ -1,1 +1,1 @@
-{"forkRPCUrl":"https://rpc.tenderly.co/fork/4c2f0fdc-3f8b-4d2b-84e7-6360ea1216bc"}
+{"forkURL":"https://rpc.tenderly.co/fork/5e18165c-4437-4b88-b532-2f8d20833863"}
