--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ethers": "^5.5.4",
     "hardhat": "^2.9.9",
     "hardhat-contract-sizer": "^2.4.0",
+    "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-gas-reporter": "^1.0.7",
     "husky": "4",
     "lint-staged": "^12.4.0",
