--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "abi-decoder": "^2.4.0",
     "axios": "^0.26.1",
     "hardhat-change-network": "^0.0.7",
-    "openzeppelin-contracts-4.4.1": "npm:@openzeppelin/contracts@4.4.1"
+    "openzeppelin-contracts-4.4.1": "npm:@openzeppelin/contracts@4.4.1",
+    "openzeppelin-uni": "npm:@openzeppelin/contracts@3.4.2-solc-0.7"
   },
   "husky": {
     "hooks": {
