--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -29,7 +29,7 @@ jobs:
         run: pip3 install slither-analyzer
 
       - name: Run slither
-        run: slither . --sarif results.sarif
+        run: rm results.sarif && slither . --sarif results.sarif
 
       - name: Print all files
         run: ls -la
