--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -29,6 +29,7 @@ jobs:
         run: pip3 install slither-analyzer
 
       - name: Run slither
+        continue-on-error: true
         run: rm results.sarif && slither . --sarif results.sarif
 
       - name: Print all files
