--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: "./result.sarif"
+          sarif_file: "./results.sarif"
